--- a/courses/example/example1/index.html
+++ b/courses/example/example1/index.html
@@ -274,7 +274,7 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#stats"><span>Working groups</span></a>
+          <a class="nav-link " href="/#workinggroups"><span>Working groups</span></a>
         </li>
 
         
