--- a/404.html
+++ b/404.html
@@ -269,7 +269,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#stats"><span>Working groups</span></a>
+          <a class="nav-link " href="/#workinggroups"><span>Working groups</span></a>
         </li>
 
         
