--- a/publication/index.html
+++ b/publication/index.html
@@ -575,7 +575,7 @@
   </span>
   (2008).
   <a href="/publication/stats_articles/2008-01-01_a_second_marshall_/" itemprop="name">A second {M}arshall inequality in convex estimation</a>.
-  Balabdaoui, F. &amp; Rufibach, K. (2008). A second Marshall inequality in convex estimation. <em>Statist. Probab. Lett.</em>, 78(2), 118-126..
+  Statist. Probab. Lett..
   
   <p>
 
@@ -638,7 +638,7 @@
   </span>
   (2007).
   <a href="/publication/stats_articles/2007-01-01_computing_maximum_li/" itemprop="name">Computing Maximum Likelihood Estimators of a Log-Concave Density Function</a>.
-  Rufibach, K. (2007). Computing Maximum Likelihood Estimators of a log-concave Density Function. <em>J. Stat. Comput. Simul.</em>, 77(7), 561-574..
+  <em>J. Stat. Comput. Simul.</em>.
   
   <p>
 
@@ -701,7 +701,7 @@
   </span>
   (2001).
   <a href="/publication/stats_articles/2001_01_01_evk/" itemprop="name">Eintrittsraten und Austrittswahrscheinlichkeiten EVK 2000</a>.
-  Rufibach, K., Bertschy, M., Schuettel, M., Vock, M., Wasserfallen, T. (2001). Eintrittsraten und Austrittswahrscheinlichkeiten EVK 2000. <em>Mitteilungen der Schweizerischen Aktuarvereinigung</em>, <sup>2001</sup>&frasl;<sub>1</sub>, 49-70..
+  <em>Mitteilungen der Schweizerischen Aktuarvereinigung</em>.
   
   <p>
 
