--- a/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
+++ b/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
@@ -677,7 +677,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Rufibach, K. (2007). Computing Maximum Likelihood Estimators of a log-concave Density Function. <em>J. Stat. Comput. Simul.</em>, 77(7), 561-574.</div>
+          <div class="col-12 col-md-9"><em>J. Stat. Comput. Simul.</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
