--- a/publication/stats_articles/2008-01-01_a_second_marshall_/index.html
+++ b/publication/stats_articles/2008-01-01_a_second_marshall_/index.html
@@ -677,7 +677,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Balabdaoui, F. &amp; Rufibach, K. (2008). A second Marshall inequality in convex estimation. <em>Statist. Probab. Lett.</em>, 78(2), 118-126.</div>
+          <div class="col-12 col-md-9">Statist. Probab. Lett.</div>
         </div>
       </div>
       <div class="col-md-1"></div>
