--- a/publication/index.html
+++ b/publication/index.html
@@ -575,7 +575,7 @@
   </span>
   (2008).
   <a href="/publication/stats_articles/2008-01-01_a_second_marshall_/" itemprop="name">A second {M}arshall inequality in convex estimation</a>.
-  Statist. Probab. Lett..
+  <em>Statist. Probab. Lett.</em>, 78(2), 118-126.
   
   <p>
 
@@ -638,7 +638,7 @@
   </span>
   (2007).
   <a href="/publication/stats_articles/2007-01-01_computing_maximum_li/" itemprop="name">Computing Maximum Likelihood Estimators of a Log-Concave Density Function</a>.
-  <em>J. Stat. Comput. Simul.</em>.
+  <em>J. Stat. Comput. Simul.</em>, 77(7), 561-574.
   
   <p>
 
@@ -701,7 +701,7 @@
   </span>
   (2001).
   <a href="/publication/stats_articles/2001_01_01_evk/" itemprop="name">Eintrittsraten und Austrittswahrscheinlichkeiten EVK 2000</a>.
-  <em>Mitteilungen der Schweizerischen Aktuarvereinigung</em>.
+  <em>Mitteilungen der Schweizerischen Aktuarvereinigung</em>, <sup>2001</sup>&frasl;<sub>1</sub>, 49-70.
   
   <p>
 
