--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -506,6 +506,13 @@
   </div>
   
   <div>
+    <h2><a href="/publication/stats_articles/2008-01-01_on_the_max-domain_of/">On the max-domain of attraction of distributions with log-concave densities</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="/publication/stats_articles/2007-01-01_computing_maximum_li/">Computing Maximum Likelihood Estimators of a Log-Concave Density Function</a></h2>
     <div class="article-style">
       
