--- a/404.html
+++ b/404.html
@@ -298,7 +298,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#stats_articles"><span>Statistical papers</span></a>
+          <a class="nav-link " href="/#stats_articles"><span>Statistical publications</span></a>
         </li>
 
         
