--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
   </span>
   (2001).
   <a href="/publication/stats_articles/2001_01_01_evk/" itemprop="name">Eintrittsraten und Austrittswahrscheinlichkeiten EVK 2000</a>.
-  <em>Mitteilungen der Schweizerischen Aktuarvereinigung</em>, <sup>2001</sup>&frasl;<sub>1</sub>, 49-70.
+  <em>Mitteilungen der Schweizerischen Aktuarvereinigung</em>, 2001(1), 49-70.
   
   <p>
 
