--- a/publication/stats_articles/2001_01_01_evk/index.html
+++ b/publication/stats_articles/2001_01_01_evk/index.html
@@ -677,7 +677,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Mitteilungen der Schweizerischen Aktuarvereinigung</em>, <sup>2001</sup>&frasl;<sub>1</sub>, 49-70</div>
+          <div class="col-12 col-md-9"><em>Mitteilungen der Schweizerischen Aktuarvereinigung</em>, 2001(1), 49-70</div>
         </div>
       </div>
       <div class="col-md-1"></div>
