--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('https://www.kasparrufibach.ch/img/avatar.jpg');"></div>
-      <meta itemprop="image" content="https://www.kasparrufibach.ch/img/avatar.jpg">
+      <div class="portrait" style="background-image: url('https://www.kasparrufibach.ch/img/kaspar.jpg');"></div>
+      <meta itemprop="image" content="https://www.kasparrufibach.ch/img/kaspar.jpg">
       
 
       <div class="portrait-title">
