--- a/404.html
+++ b/404.html
@@ -277,6 +277,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2017-article-social-interactions/">Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/">A second {M}arshall inequality in convex estimation</a></li>
   </ul>
   
