--- a/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
+++ b/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
@@ -383,6 +383,18 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://doi.org/10.1162/REST_a_00656" target="_blank" rel="noopener">
+  Link to journal
+</a>
+
+<a class="btn btn-primary btn-outline" href="https://www.mitpressjournals.org/doi/suppl/10.1162/REST_a_00656/suppl_file/REST_a_00656-esupp.pdf" target="_blank" rel="noopener">
+  Supplemental Appendix
+</a>
+
+<a class="btn btn-primary btn-outline" href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/3SLMJY" target="_blank" rel="noopener">
+  Replication Dataset and Code
+</a>
+
 
 
           </div>
