--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         
         <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
           <a href="https://www.roche.com/" target="_blank" itemprop="url" rel="noopener">
-          <span itemprop="name">F. Hoffmann-La Roche</span>
+          <span itemprop="name">Methods, Collaboration, and Outreach Group (MCO), F. Hoffmann-La Roche, Basel, Switzerland</span>
           </a>
         </h3>
         
