--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
 <p>Kaspar Rufibach has received training as a mathematical statistician. Through more than 15 years in various biostatistical roles he has complemented his thorough theoretical background with expertise in biostatistics. He is passionate about applying this expertise to solve problems in pharmaceutical drug development.</p>
 
-<p>[Curriculum Vitae](&ldquo;files/01_Kaspar_Rufibach_CV.pdf&rdquo;)</p>
+<p><a href="files/01_Kaspar_Rufibach_CV.pdf" target="_blank">Curriculum Vitae</a></p>
 
 
     <div class="row">
@@ -506,9 +506,9 @@
       
         <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
-  <a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/" itemprop="name">A second {M}arshall inequality in convex estimation</a>
+  <a href="https://numbersman77.netlify.com/publication/stats_articles/template/" itemprop="name">Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods</a>
   <div itemprop="author">
-    Fadoua Balabdaoui, Kaspar Rufibach</div>
+    Wim Bernasco, Thomas de Graaff, Jan Rouwendal, Wouter Steenbeek</div>
   <p>
 
 
@@ -527,6 +527,18 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://doi.org/10.1162/REST_a_00656" target="_blank" rel="noopener">
+  Link to journal
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://www.mitpressjournals.org/doi/suppl/10.1162/REST_a_00656/suppl_file/REST_a_00656-esupp.pdf" target="_blank" rel="noopener">
+  Supplemental Appendix
+</a>
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/3SLMJY" target="_blank" rel="noopener">
+  Replication Dataset and Code
+</a>
+
 </p>
 </div>
 
@@ -535,9 +547,9 @@
       
         <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
-  <a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_on_the_max-domain_of/" itemprop="name">On the max-domain of attraction of distributions with log-concave densities</a>
+  <a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/" itemprop="name">A second {M}arshall inequality in convex estimation</a>
   <div itemprop="author">
-    Samuel Muller, Kaspar Rufibach</div>
+    Fadoua Balabdaoui, Kaspar Rufibach</div>
   <p>
 
 
