--- a/publication_types/2/index.html
+++ b/publication_types/2/index.html
@@ -261,6 +261,13 @@
   </div>
   
   <div>
+    <h2><a href="https://numbersman77.netlify.com/publication/stats_articles/template/">Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/">A second {M}arshall inequality in convex estimation</a></h2>
     <div class="article-style">
       
