--- a/404.html
+++ b/404.html
@@ -256,7 +256,7 @@
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/">A second {M}arshall inequality in convex estimation</a></li>
+    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/">A second Marshall inequality in convex estimation</a></li>
   </ul>
   
   <ul>
