--- a/publication/stats_articles/2001_01_01_evk/index.html
+++ b/publication/stats_articles/2001_01_01_evk/index.html
@@ -381,16 +381,8 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://doi.org/10.1162/REST_a_00656" target="_blank" rel="noopener">
-  Link to journal
-</a>
-
-<a class="btn btn-primary btn-outline" href="https://www.mitpressjournals.org/doi/suppl/10.1162/REST_a_00656/suppl_file/REST_a_00656-esupp.pdf" target="_blank" rel="noopener">
-  Supplemental Appendix
-</a>
-
-<a class="btn btn-primary btn-outline" href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/3SLMJY" target="_blank" rel="noopener">
-  Replication Dataset and Code
+<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/files/papers/001_2001_Rufibach%20et%20al,%20Eintrittsraten%20EVK" target="_blank" rel="noopener">
+  PDF
 </a>
 
 
