--- a/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
+++ b/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
@@ -381,16 +381,12 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://doi.org/10.1162/REST_a_00656" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="http://dx.doi.org/10.1080/10629360600569097" target="_blank" rel="noopener">
   Link to journal
 </a>
 
-<a class="btn btn-primary btn-outline" href="https://www.mitpressjournals.org/doi/suppl/10.1162/REST_a_00656/suppl_file/REST_a_00656-esupp.pdf" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="https://doi.org/10.1162/REST_a_00656" target="_blank" rel="noopener">
   Supplemental Appendix
-</a>
-
-<a class="btn btn-primary btn-outline" href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/3SLMJY" target="_blank" rel="noopener">
-  Replication Dataset and Code
 </a>
 
 
@@ -404,13 +400,9 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><!-- More detail can easily be written here using *Markdown* and $\rm \LaTeX$ math code. -->
-</div>
+    <div class="article-style"></div>
 
     
-
-
-
 
 
   </div>
