--- a/publication/stats_articles/2008-01-01_a_second_marshall_/index.html
+++ b/publication/stats_articles/2008-01-01_a_second_marshall_/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/publication/stats_articles/2008-01-01_a_second_marshall_/">
-  <meta property="og:title" content="A second {M}arshall inequality in convex estimation | Kaspar Rufibach">
+  <meta property="og:title" content="A second Marshall inequality in convex estimation | Kaspar Rufibach">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>A second {M}arshall inequality in convex estimation | Kaspar Rufibach</title>
+  <title>A second Marshall inequality in convex estimation | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -251,7 +251,7 @@
 
 
   <div class="container pub-title">
-    <h1 itemprop="name">A second {M}arshall inequality in convex estimation</h1>
+    <h1 itemprop="name">A second Marshall inequality in convex estimation</h1>
     <span class="pub-authors" itemprop="author">
       
       Fadoua Balabdaoui, Kaspar Rufibach
@@ -263,7 +263,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=A%20second%20%7bM%7darshall%20inequality%20in%20convex%20estimation&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2008-01-01_a_second_marshall_%2f"
+         href="https://twitter.com/intent/tweet?text=A%20second%20Marshall%20inequality%20in%20convex%20estimation&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2008-01-01_a_second_marshall_%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -277,21 +277,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2008-01-01_a_second_marshall_%2f&amp;title=A%20second%20%7bM%7darshall%20inequality%20in%20convex%20estimation"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2008-01-01_a_second_marshall_%2f&amp;title=A%20second%20Marshall%20inequality%20in%20convex%20estimation"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2008-01-01_a_second_marshall_%2f&amp;title=A%20second%20%7bM%7darshall%20inequality%20in%20convex%20estimation"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2008-01-01_a_second_marshall_%2f&amp;title=A%20second%20Marshall%20inequality%20in%20convex%20estimation"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=A%20second%20%7bM%7darshall%20inequality%20in%20convex%20estimation&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2008-01-01_a_second_marshall_%2f">
+         href="mailto:?subject=A%20second%20Marshall%20inequality%20in%20convex%20estimation&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2008-01-01_a_second_marshall_%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -381,6 +381,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="http://dx.doi.org/10.1016/j.spl.2007.05.009" target="_blank" rel="noopener">
+  Link to journal
+</a>
+
 
 
           </div>
@@ -395,9 +399,6 @@
     <div class="article-style"></div>
 
     
-
-
-
 
 
   </div>
