--- a/publication/stats_articles/2001_01_01_evk/index.html
+++ b/publication/stats_articles/2001_01_01_evk/index.html
@@ -381,7 +381,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/files/papers/001_2001_Rufibach%20et%20al,%20Eintrittsraten%20EVK" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="https://numbersman77.netlify.com/files/publications/001_2001_Rufibach%20et%20al,%20Eintrittsraten%20EVK.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
