--- a/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
+++ b/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
@@ -385,8 +385,8 @@
   Link to journal
 </a>
 
-<a class="btn btn-primary btn-outline" href="https://doi.org/10.1162/REST_a_00656" target="_blank" rel="noopener">
-  Supplemental Appendix
+<a class="btn btn-primary btn-outline" href="http://cran.r-project.org/package=logcondens" target="_blank" rel="noopener">
+  R package logcondens
 </a>
 
 
