--- a/publication/index.html
+++ b/publication/index.html
@@ -477,8 +477,8 @@
   Link to journal
 </a>
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://doi.org/10.1162/REST_a_00656" target="_blank" rel="noopener">
-  Supplemental Appendix
+<a class="btn btn-primary btn-outline btn-xs" href="http://cran.r-project.org/package=logcondens" target="_blank" rel="noopener">
+  R package logcondens
 </a>
 
 </p>
@@ -521,7 +521,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/files/papers/001_2001_Rufibach%20et%20al,%20Eintrittsraten%20EVK" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline btn-xs" href="https://numbersman77.netlify.com/files/publications/001_2001_Rufibach%20et%20al,%20Eintrittsraten%20EVK.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
