--- a/publication/stats_articles/2009-01-01_maximum_likelihood_e/index.html
+++ b/publication/stats_articles/2009-01-01_maximum_likelihood_e/index.html
@@ -390,7 +390,7 @@
 </a>
 
 <a class="btn btn-primary btn-outline" href="http://cran.r-project.org/package=logcondens" target="_blank" rel="noopener">
-  R package logcondens
+  R package
 </a>
 
 
