--- a/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
+++ b/publication/stats_articles/2007-01-01_computing_maximum_li/index.html
@@ -386,7 +386,7 @@
 </a>
 
 <a class="btn btn-primary btn-outline" href="http://cran.r-project.org/package=logcondens" target="_blank" rel="noopener">
-  R package logcondens
+  R package
 </a>
 
 
