--- a/teaching/index.html
+++ b/teaching/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Senior Principal Statistical Scientist">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://numbersman77.netlify.com/tags/spatio-temporal/">
+  <link rel="alternate" hreflang="en-us" href="https://numbersman77.netlify.com/teaching/">
 
   
 
@@ -58,15 +58,15 @@
   
 
   
-  <link rel="alternate" href="https://numbersman77.netlify.com/tags/spatio-temporal/index.xml" type="application/rss+xml" title="Kaspar Rufibach">
-  <link rel="feed" href="https://numbersman77.netlify.com/tags/spatio-temporal/index.xml" type="application/rss+xml" title="Kaspar Rufibach">
+  <link rel="alternate" href="https://numbersman77.netlify.com/teaching/index.xml" type="application/rss+xml" title="Kaspar Rufibach">
+  <link rel="feed" href="https://numbersman77.netlify.com/teaching/index.xml" type="application/rss+xml" title="Kaspar Rufibach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://numbersman77.netlify.com/tags/spatio-temporal/">
+  <link rel="canonical" href="https://numbersman77.netlify.com/teaching/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -74,8 +74,8 @@
   <meta property="twitter:creator" content="@numbersman77">
   
   <meta property="og:site_name" content="Kaspar Rufibach">
-  <meta property="og:url" content="https://numbersman77.netlify.com/tags/spatio-temporal/">
-  <meta property="og:title" content="spatio-temporal | Kaspar Rufibach">
+  <meta property="og:url" content="https://numbersman77.netlify.com/teaching/">
+  <meta property="og:title" content="Teachings | Kaspar Rufibach">
   <meta property="og:description" content="Senior Principal Statistical Scientist">
   <meta property="og:locale" content="en-us">
   
@@ -84,7 +84,7 @@
 
   
 
-  <title>spatio-temporal | Kaspar Rufibach</title>
+  <title>Teachings | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -247,11 +247,20 @@
 
 <div class="universal-wrapper">
 
-  <h1>spatio-temporal</h1>
+  <h1>Teachings</h1>
 
   
 
   
+  
+  <div>
+    <h2><a href="https://numbersman77.netlify.com/teaching/cybercrime/">Cybercriminal decision-making</a></h2>
+    <div class="article-style">
+      
+      Real-world experiments with cybercrime offenders
+      
+    </div>
+  </div>
   
   <div>
     <h2><a href="https://numbersman77.netlify.com/teaching/risk-urban/">Risk Across the Urban Landscape</a></h2>
