--- a/404.html
+++ b/404.html
@@ -278,23 +278,11 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2017-oslo/">How businesses and facilities affect crime: a fixed effects analysis of street segments over a ten-year period in The Hague, The Netherlands</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/1900_template/"></a></li>
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2016-asc/">Open for business: The impact of opening hours on street segment crime levels</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2016-esc/">Residential burglary target selection: an analysis using Google maps</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2017-nvc/">Ruimtelijk-temporele patronen van woninginbraak in Antwerpen, 2005-2014: In hoeverre is woninginbraak geconcentreerd in bepaalde straatsegmenten, en hoe stabiel is deze concentratie over de tijd?</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2017-ministry/">Wat maakt het misdaadpatroon: buurt of straat?</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/2019_rufibach_psi_webinar_adaptive/">rpact - R Package for Adaptive Clinical Trials</a></li>
   </ul>
   
   
