--- a/publication/index.html
+++ b/publication/index.html
@@ -338,7 +338,7 @@
   <span itemprop="author">
     Kaspar Rufibach, Guenther Walther</span>
   (2010).
-  <a href="https://numbersman77.netlify.com/publication/stats_articles/2010-01-02_the_block_criterion_/" itemprop="name">The block criterion for multiscale inference about a density, with applications to other multiscale problems.</a>.
+  <a href="https://numbersman77.netlify.com/publication/stats_articles/2010-01-02_the_block_criterion_/" itemprop="name">The block criterion for multiscale inference about a density, with applications to other multiscale problems</a>.
   <em>J. Comput. Graph. Statist.</em>, (19), 1, 175-190.
   
   <p>
@@ -538,7 +538,7 @@
   <span itemprop="author">
     Fadoua Balabdaoui, Kaspar Rufibach, Jon A Wellner</span>
   (2009).
-  <a href="https://numbersman77.netlify.com/publication/stats_articles/2009-01-02_limit_distribution_t/" itemprop="name">Limit Distribution Theory for Maximum Likelihood Estimation of a Log-Concave Density.</a>.
+  <a href="https://numbersman77.netlify.com/publication/stats_articles/2009-01-02_limit_distribution_t/" itemprop="name">Limit Distribution Theory for Maximum Likelihood Estimation of a Log-Concave Density</a>.
   <em>Ann. Statist.</em>, (37), 1299-1331.
   
   <p>
