--- a/publication/stats_articles/2010-01-02_the_block_criterion_/index.html
+++ b/publication/stats_articles/2010-01-02_the_block_criterion_/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/publication/stats_articles/2010-01-02_the_block_criterion_/">
-  <meta property="og:title" content="The block criterion for multiscale inference about a density, with applications to other multiscale problems. | Kaspar Rufibach">
+  <meta property="og:title" content="The block criterion for multiscale inference about a density, with applications to other multiscale problems | Kaspar Rufibach">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>The block criterion for multiscale inference about a density, with applications to other multiscale problems. | Kaspar Rufibach</title>
+  <title>The block criterion for multiscale inference about a density, with applications to other multiscale problems | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -251,7 +251,7 @@
 
 
   <div class="container pub-title">
-    <h1 itemprop="name">The block criterion for multiscale inference about a density, with applications to other multiscale problems.</h1>
+    <h1 itemprop="name">The block criterion for multiscale inference about a density, with applications to other multiscale problems</h1>
     <span class="pub-authors" itemprop="author">
       
       Kaspar Rufibach, Guenther Walther
@@ -263,7 +263,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=The%20block%20criterion%20for%20multiscale%20inference%20about%20a%20density%2c%20with%20applications%20to%20other%20multiscale%20problems.&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2010-01-02_the_block_criterion_%2f"
+         href="https://twitter.com/intent/tweet?text=The%20block%20criterion%20for%20multiscale%20inference%20about%20a%20density%2c%20with%20applications%20to%20other%20multiscale%20problems&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2010-01-02_the_block_criterion_%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -277,21 +277,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2010-01-02_the_block_criterion_%2f&amp;title=The%20block%20criterion%20for%20multiscale%20inference%20about%20a%20density%2c%20with%20applications%20to%20other%20multiscale%20problems."
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2010-01-02_the_block_criterion_%2f&amp;title=The%20block%20criterion%20for%20multiscale%20inference%20about%20a%20density%2c%20with%20applications%20to%20other%20multiscale%20problems"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2010-01-02_the_block_criterion_%2f&amp;title=The%20block%20criterion%20for%20multiscale%20inference%20about%20a%20density%2c%20with%20applications%20to%20other%20multiscale%20problems."
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2010-01-02_the_block_criterion_%2f&amp;title=The%20block%20criterion%20for%20multiscale%20inference%20about%20a%20density%2c%20with%20applications%20to%20other%20multiscale%20problems"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=The%20block%20criterion%20for%20multiscale%20inference%20about%20a%20density%2c%20with%20applications%20to%20other%20multiscale%20problems.&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2010-01-02_the_block_criterion_%2f">
+         href="mailto:?subject=The%20block%20criterion%20for%20multiscale%20inference%20about%20a%20density%2c%20with%20applications%20to%20other%20multiscale%20problems&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2010-01-02_the_block_criterion_%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
