--- a/publication/stats_articles/2009-01-02_limit_distribution_t/index.html
+++ b/publication/stats_articles/2009-01-02_limit_distribution_t/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/publication/stats_articles/2009-01-02_limit_distribution_t/">
-  <meta property="og:title" content="Limit Distribution Theory for Maximum Likelihood Estimation of a Log-Concave Density. | Kaspar Rufibach">
+  <meta property="og:title" content="Limit Distribution Theory for Maximum Likelihood Estimation of a Log-Concave Density | Kaspar Rufibach">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>Limit Distribution Theory for Maximum Likelihood Estimation of a Log-Concave Density. | Kaspar Rufibach</title>
+  <title>Limit Distribution Theory for Maximum Likelihood Estimation of a Log-Concave Density | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -251,7 +251,7 @@
 
 
   <div class="container pub-title">
-    <h1 itemprop="name">Limit Distribution Theory for Maximum Likelihood Estimation of a Log-Concave Density.</h1>
+    <h1 itemprop="name">Limit Distribution Theory for Maximum Likelihood Estimation of a Log-Concave Density</h1>
     <span class="pub-authors" itemprop="author">
       
       Fadoua Balabdaoui, Kaspar Rufibach, Jon A Wellner
@@ -263,7 +263,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Limit%20Distribution%20Theory%20for%20Maximum%20Likelihood%20Estimation%20of%20a%20Log-Concave%20Density.&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2009-01-02_limit_distribution_t%2f"
+         href="https://twitter.com/intent/tweet?text=Limit%20Distribution%20Theory%20for%20Maximum%20Likelihood%20Estimation%20of%20a%20Log-Concave%20Density&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2009-01-02_limit_distribution_t%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -277,21 +277,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2009-01-02_limit_distribution_t%2f&amp;title=Limit%20Distribution%20Theory%20for%20Maximum%20Likelihood%20Estimation%20of%20a%20Log-Concave%20Density."
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2009-01-02_limit_distribution_t%2f&amp;title=Limit%20Distribution%20Theory%20for%20Maximum%20Likelihood%20Estimation%20of%20a%20Log-Concave%20Density"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2009-01-02_limit_distribution_t%2f&amp;title=Limit%20Distribution%20Theory%20for%20Maximum%20Likelihood%20Estimation%20of%20a%20Log-Concave%20Density."
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2009-01-02_limit_distribution_t%2f&amp;title=Limit%20Distribution%20Theory%20for%20Maximum%20Likelihood%20Estimation%20of%20a%20Log-Concave%20Density"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Limit%20Distribution%20Theory%20for%20Maximum%20Likelihood%20Estimation%20of%20a%20Log-Concave%20Density.&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2009-01-02_limit_distribution_t%2f">
+         href="mailto:?subject=Limit%20Distribution%20Theory%20for%20Maximum%20Likelihood%20Estimation%20of%20a%20Log-Concave%20Density&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fpublication%2fstats_articles%2f2009-01-02_limit_distribution_t%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
