--- a/404.html
+++ b/404.html
@@ -282,7 +282,15 @@
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2019_rufibach_psi_webinar_adaptive/">rpact - R Package for Adaptive Clinical Trials</a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/2019_ct_europe/"></a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://numbersman77.netlify.com/talk/2019_roes/"></a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://numbersman77.netlify.com/talk/2019_psi_webinar/">rpact - R Package for Adaptive Clinical Trials</a></li>
   </ul>
   
   
