--- a/404.html
+++ b/404.html
@@ -282,11 +282,11 @@
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2019_ct_europe/"></a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/2019_roes/">Before going BIG - seize opportunities for small data: use of multistate models to improve decision-making and effect quantification in clinical trials</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/talk/2019_roes/"></a></li>
+    <li><a href="https://numbersman77.netlify.com/talk/2019_ct_europe/">Implications of the ICH E9 estimand addendum on how we develop, run, and analyze clinical trials</a></li>
   </ul>
   
   <ul>
