--- a/software/logcondens/index.html
+++ b/software/logcondens/index.html
@@ -345,9 +345,9 @@ Paper 4">
 <a href="http://dx.doi.org/10.1214/08-AOS609" target="_blank">Paper 3</a><br>
 <a href="http://dx.doi.org/10.1515/1557-4679.1378" target="_blank">Paper 4</a><br></p>
 
-<p><a href="&quot;http://depsy.org/package/r/logcondens" target="_blank"><img src="http://depsy.org/api/package/cran/logcondens/badge.svg" alt="Alt Text" /></a><br></p>
+<p><a href="http://depsy.org/package/r/logcondens" target="_blank"><img src="http://depsy.org/api/package/cran/logcondens/badge.svg" alt="Alt Text" /></a><br></p>
 
-<p><a href="&quot;https://cranlogs.r-pkg.org/badges/logcondens" target="_blank"><img src="https://cranlogs.r-pkg.org/badges/logcondens" alt="Alt Text" /></a></p>
+<p><a href="https://cranlogs.r-pkg.org/badges/logcondens" target="_blank"><img src="https://cranlogs.r-pkg.org/badges/logcondens" alt="Alt Text" /></a></p>
 
       </div>
 
