--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
     
   </div>
   <div class="col-xs-12 col-md-8">
-    <p>When I think it may be helpful to others, I publish my code as a software package. So far, I have published two R packages on Github:
+    <p>A considerable amount of software grew out of my research. Most of this code is made available as packages for the freely available software <a href="http://www.r-project.org" target="_blank">R</a> and can be downloaded from <a href="http://cran.ch.r-project.org" target="_blank">CRAN</a>. The packages were first uploaded to <a href="http://cran.ch.r-project.org" target="_blank">CRAN</a> in the years indicated.
 <br><br></p>
 
     
