--- a/software/logcondens/index.html
+++ b/software/logcondens/index.html
@@ -22,7 +22,7 @@ Paper 1
 Paper 2
 Paper 3
 Paper 4
-
+Depsy
 []()">
 
   
@@ -89,7 +89,7 @@ Paper 1
 Paper 2
 Paper 3
 Paper 4
-
+Depsy
 []()">
   <meta property="og:locale" content="en-us">
   
@@ -349,7 +349,7 @@ Paper 4
 <a href="http://dx.doi.org/10.1214/08-AOS609" target="_blank">Paper 3</a><br>
 <a href="http://dx.doi.org/10.1515/1557-4679.1378" target="_blank">Paper 4</a><br></p>
 
-<p><a href="http://depsy.org/package/r/logcondens" target="_blank"><img src="http://depsy.org/api/package/cran/logcondens/badge.svg" alt="" /></a><br></p>
+<p><a href="http://depsy.org/package/r/logcondens" target="_blank">Depsy</a><br></p>
 
 <p>[<img src="https://cranlogs.r-pkg.org/badges/logcondens" alt="" />]()</p>
 
