--- a/software/logcondens/index.html
+++ b/software/logcondens/index.html
@@ -349,7 +349,9 @@
 
 <div class="article-tags">
   
-  <a class="btn btn-primary btn-outline" href="/tags/logcondens">logcondens</a>
+  <a class="btn btn-primary btn-outline" href="/tags/log-concave">log-concave</a>
+  
+  <a class="btn btn-primary btn-outline" href="/tags/shape-constraint">shape-constraint</a>
   
 </div>
 
@@ -361,6 +363,16 @@
 </article>
 
 
+
+<div class="article-container article-widget">
+  <div class="hr-light"></div>
+  <h3>Related</h3>
+  <ul>
+    
+    <li><a href="/software/ordmonreg/">OrdMonReg</a></li>
+    
+  </ul>
+</div>
 
 
 
