--- a/software/ordmonreg/index.html
+++ b/software/ordmonreg/index.html
@@ -345,7 +345,7 @@
 
 <div class="article-tags">
   
-  <a class="btn btn-primary btn-outline" href="/tags/ordmonreg">OrdMonReg</a>
+  <a class="btn btn-primary btn-outline" href="/tags/shape-constraint">shape-constraint</a>
   
 </div>
 
@@ -357,6 +357,16 @@
 </article>
 
 
+
+<div class="article-container article-widget">
+  <div class="hr-light"></div>
+  <h3>Related</h3>
+  <ul>
+    
+    <li><a href="/software/logcondens/">logcondens</a></li>
+    
+  </ul>
+</div>
 
 
 
