--- a/software/ordmonreg/index.html
+++ b/software/ordmonreg/index.html
@@ -334,7 +334,8 @@
         <p>We consider the problem of estimating two isotonic regression curves g1* and g2* under the constraint that they are ordered, i.e. g1* &lt;= g2*. Given two sets of n data points y_1, &hellip;, y_n and z_1, &hellip;, z_n that are observed at (the same) deterministic design points x_1, &hellip;, x<em>n, the estimates are obtained by minimizing the Least Squares criterion L(a, b) = sum</em>{i=1}^n (y_i - a_i)^2 w1(x<em>i) + sum</em>{i=1}^n (z_i - b_i)^2 w2(x_i) over the class of pairs of vectors (a, b) such that a and b are isotonic and a_i &lt;= b_i for all i = 1, &hellip;, n. We offer two different approaches to compute the estimates: a projected subgradient algorithm where the projection is calculated using a PAVA as well as Dykstra&rsquo;s cyclical projection algorithm.</p>
 
 <p><a href="http://cran.r-project.org/package=OrdMonReg" target="_blank">Download OrdMonReg from CRAN</a><br>
-<a href="http://dx.doi.org/10.1016/j.csda.2010.01.014" target="_blank">Paper</a><br></p>
+<a href="http://dx.doi.org/10.1016/j.csda.2010.01.014" target="_blank">Paper</a><br>
+<a href="http://depsy.org/package/r/OrdMonReg" target="_blank">Depsy</a><br></p>
 
 <p><img src="https://cranlogs.r-pkg.org/badges/OrdMonReg" alt="" /></p>
 
@@ -346,6 +347,8 @@
 <div class="article-tags">
   
   <a class="btn btn-primary btn-outline" href="/tags/shape-constraint">shape-constraint</a>
+  
+  <a class="btn btn-primary btn-outline" href="/tags/regression">regression</a>
   
 </div>
 
