--- a/software/smoothtail/index.html
+++ b/software/smoothtail/index.html
@@ -334,7 +334,8 @@
         <p>Given independent and identically distributed observations X(1), &hellip;, X(n) from a Generalized Pareto distribution with shape parameter gamma in [-1,0], offers several estimates to compute estimates of gamma. The estimates are based on the principle of replacing the order statistics by quantiles of a distribution function based on a log-concave density function. This procedure is justified by the fact that the GPD density is log-concave for gamma in [-1,0].</p>
 
 <p><a href="http://cran.r-project.org/package=smoothtail" target="_blank">Download smoothtail from CRAN</a><br>
-<a href="http://dx.doi.org/10.1080/00949650802142667" target="_blank">Paper</a><br></p>
+<a href="http://dx.doi.org/10.1080/00949650802142667" target="_blank">Paper</a><br>
+<a href="http://depsy.org/package/r/smoothtail" target="_blank">Depsy</a><br></p>
 
 <p><img src="https://cranlogs.r-pkg.org/badges/smoothtail" alt="" /></p>
 
