--- a/software/biostatuzh/index.html
+++ b/software/biostatuzh/index.html
@@ -331,22 +331,22 @@
 
 
       <div class="article-style" itemprop="articleBody">
-        <p>Various functions developed at the Department of <a href="https://www.ebpi.uzh.ch/en/aboutus/departments/biostatistics.html" target="_blank">Biostatistics, Epidemiology, Biostatistics and Prevention Institute</a>, <a href="https://www.uzh.ch" target="_blank">University of Zurich</a>. Currently implemented topics:
-- several CI&rsquo;s for proportions,
-- several CI&rsquo;s for diagnostic tests,
-- Fagan-Nomogram,
-- bootstrap CI&rsquo;s for the kappa coefficient,
-- intraclass-correlation coefficients including CI&rsquo;s,
-- agreement for continuous measurements (Bland-Altman plot),
-- CI for the area under the curve (AUC),
-- Mantel-Haenszel estimator,
-- Mantel-Cox hazard ratio estimator,
-- CI for the Kaplan-Meier estimate at given time points,
-- CI for quantile of a Kaplan-Meier or cumulative incidence estimate,
-- sample size computations for two-sample Mann-Whitney test, McNemar test, binary diagnostic test (via normal approximation and simulation),
-- natural re-parametrization of Weibull output from survreg,
-- hazard ratio and event time ratio interpretations,
-- a plot to check the adequacy of the Weibull model.</p>
+        <p>Various functions developed at the Department of <a href="https://www.ebpi.uzh.ch/en/aboutus/departments/biostatistics.html" target="_blank">Biostatistics, Epidemiology, Biostatistics and Prevention Institute</a>, <a href="https://www.uzh.ch" target="_blank">University of Zurich</a>. Currently implemented topics:<br>
+- several CI&rsquo;s for proportions,<br>
+- several CI&rsquo;s for diagnostic tests,<br>
+- Fagan-Nomogram,<br>
+- bootstrap CI&rsquo;s for the kappa coefficient,<br>
+- intraclass-correlation coefficients including CI&rsquo;s,<br>
+- agreement for continuous measurements (Bland-Altman plot),<br>
+- CI for the area under the curve (AUC),<br>
+- Mantel-Haenszel estimator,<br>
+- Mantel-Cox hazard ratio estimator,<br>
+- CI for the Kaplan-Meier estimate at given time points,<br>
+- CI for quantile of a Kaplan-Meier or cumulative incidence estimate,<br>
+- sample size computations for two-sample Mann-Whitney test, McNemar test, binary diagnostic test (via normal approximation and simulation), <br>
+- natural re-parametrization of Weibull output from survreg,<br>
+- hazard ratio and event time ratio interpretations,<br>
+- a plot to check the adequacy of the Weibull model. <br><br></p>
 
 <p><a href="http://ebuzh.r-forge.r-project.org/" target="_blank">Download instructions</a></p>
 
