--- a/404.html
+++ b/404.html
@@ -268,7 +268,7 @@
   </ul>
   
   <ul>
-    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/template/">Social interactions and crime revisited: An investigation using individual offender data in Dutch neighborhoods</a></li>
+    <li><a href="https://numbersman77.netlify.com/publication/stats_articles/2016_03_cll11/"></a></li>
   </ul>
   
   
