--- a/404.html
+++ b/404.html
@@ -189,7 +189,7 @@
         <li class="nav-item">
           <a href="/#teaching">
             
-            <span>Teaching</span>
+            <span>Teaching &amp; supervision</span>
             
           </a>
         </li>
