--- a/publication/stats_articles/2016_03_cll11/index.html
+++ b/publication/stats_articles/2016_03_cll11/index.html
@@ -200,7 +200,7 @@ Publication name and optional abbreviated version. publication = &ldquo;Biom. J.
         <li class="nav-item">
           <a href="/#teaching">
             
-            <span>Teaching</span>
+            <span>Teaching &amp; supervision</span>
             
           </a>
         </li>
