--- a/software/biostatuzh/index.html
+++ b/software/biostatuzh/index.html
@@ -195,7 +195,7 @@
         <li class="nav-item">
           <a href="/#teaching">
             
-            <span>Teaching</span>
+            <span>Teaching &amp; supervision</span>
             
           </a>
         </li>
@@ -331,22 +331,25 @@
 
 
       <div class="article-style" itemprop="articleBody">
-        <p>Various functions developed at the Department of <a href="https://www.ebpi.uzh.ch/en/aboutus/departments/biostatistics.html" target="_blank">Biostatistics, Epidemiology, Biostatistics and Prevention Institute</a>, <a href="https://www.uzh.ch" target="_blank">University of Zurich</a>. Currently implemented topics:<br>
-- several CI&rsquo;s for proportions,<br>
-- several CI&rsquo;s for diagnostic tests,<br>
-- Fagan-Nomogram,<br>
-- bootstrap CI&rsquo;s for the kappa coefficient,<br>
-- intraclass-correlation coefficients including CI&rsquo;s,<br>
-- agreement for continuous measurements (Bland-Altman plot),<br>
-- CI for the area under the curve (AUC),<br>
-- Mantel-Haenszel estimator,<br>
-- Mantel-Cox hazard ratio estimator,<br>
-- CI for the Kaplan-Meier estimate at given time points,<br>
-- CI for quantile of a Kaplan-Meier or cumulative incidence estimate,<br>
-- sample size computations for two-sample Mann-Whitney test, McNemar test, binary diagnostic test (via normal approximation and simulation), <br>
-- natural re-parametrization of Weibull output from survreg,<br>
-- hazard ratio and event time ratio interpretations,<br>
-- a plot to check the adequacy of the Weibull model. <br><br></p>
+        <p>Various functions developed at the Department of <a href="https://www.ebpi.uzh.ch/en/aboutus/departments/biostatistics.html" target="_blank">Biostatistics, Epidemiology, Biostatistics and Prevention Institute</a>, <a href="https://www.uzh.ch" target="_blank">University of Zurich</a>. Currently implemented topics:<br></p>
+
+<ul>
+<li>several CI&rsquo;s for proportions,<br></li>
+<li>several CI&rsquo;s for diagnostic tests,<br></li>
+<li>Fagan-Nomogram,<br></li>
+<li>bootstrap CI&rsquo;s for the kappa coefficient,<br></li>
+<li>intraclass-correlation coefficients including CI&rsquo;s,<br></li>
+<li>agreement for continuous measurements (Bland-Altman plot),<br></li>
+<li>CI for the area under the curve (AUC),<br></li>
+<li>Mantel-Haenszel estimator,<br></li>
+<li>Mantel-Cox hazard ratio estimator,<br></li>
+<li>CI for the Kaplan-Meier estimate at given time points,<br></li>
+<li>CI for quantile of a Kaplan-Meier or cumulative incidence estimate,<br></li>
+<li>sample size computations for two-sample Mann-Whitney test, McNemar test, binary diagnostic test (via normal approximation and simulation), <br></li>
+<li>natural re-parametrization of Weibull output from survreg,<br></li>
+<li>hazard ratio and event time ratio interpretations,<br></li>
+<li>a plot to check the adequacy of the Weibull model. <br><br></li>
+</ul>
 
 <p><a href="http://ebuzh.r-forge.r-project.org/" target="_blank">Download instructions</a></p>
 
