--- a/publication/stats_articles/2009_04_reporttools/index.html
+++ b/publication/stats_articles/2009_04_reporttools/index.html
@@ -195,7 +195,7 @@
         <li class="nav-item">
           <a href="/#teaching">
             
-            <span>Teaching</span>
+            <span>Teaching &amp; supervision</span>
             
           </a>
         </li>
