--- a/software/logcondiscr/index.html
+++ b/software/logcondiscr/index.html
@@ -195,7 +195,7 @@
         <li class="nav-item">
           <a href="/#teaching">
             
-            <span>Teaching</span>
+            <span>Teaching &amp; supervision</span>
             
           </a>
         </li>
