--- a/working/efspi_regstat/index.html
+++ b/working/efspi_regstat/index.html
@@ -197,7 +197,7 @@ More details on EFSPI webpage">
         <li class="nav-item">
           <a href="/#teaching">
             
-            <span>Teaching</span>
+            <span>Teaching &amp; supervision</span>
             
           </a>
         </li>
