--- a/teaching/201006_lda/index.html
+++ b/teaching/201006_lda/index.html
@@ -77,7 +77,7 @@
   
   <meta property="og:site_name" content="Kaspar Rufibach">
   <meta property="og:url" content="https://numbersman77.netlify.com/teaching/201006_lda/">
-  <meta property="og:title" content="Analysis of longitudinal data | Kaspar Rufibach">
+  <meta property="og:title" content="2010/06: Analysis of longitudinal data | Kaspar Rufibach">
   <meta property="og:description" content="Leonhard Held and Kaspar Rufibach, 3-day course within MSc of Medical Biometry program, University of Heidelberg">
   <meta property="og:locale" content="en-us">
   
@@ -88,7 +88,7 @@
 
   
 
-  <title>Analysis of longitudinal data | Kaspar Rufibach</title>
+  <title>2010/06: Analysis of longitudinal data | Kaspar Rufibach</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -253,7 +253,7 @@
 
   <div class="article-container">
     <div class="article-inner">
-      <h1 itemprop="name">Analysis of longitudinal data</h1>
+      <h1 itemprop="name">2010/06: Analysis of longitudinal data</h1>
 
       
 
@@ -289,7 +289,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Analysis%20of%20longitudinal%20data&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fteaching%2f201006_lda%2f"
+         href="https://twitter.com/intent/tweet?text=2010%2f06%3a%20Analysis%20of%20longitudinal%20data&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fteaching%2f201006_lda%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -303,21 +303,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fteaching%2f201006_lda%2f&amp;title=Analysis%20of%20longitudinal%20data"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fnumbersman77.netlify.com%2fteaching%2f201006_lda%2f&amp;title=2010%2f06%3a%20Analysis%20of%20longitudinal%20data"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fteaching%2f201006_lda%2f&amp;title=Analysis%20of%20longitudinal%20data"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fnumbersman77.netlify.com%2fteaching%2f201006_lda%2f&amp;title=2010%2f06%3a%20Analysis%20of%20longitudinal%20data"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Analysis%20of%20longitudinal%20data&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fteaching%2f201006_lda%2f">
+         href="mailto:?subject=2010%2f06%3a%20Analysis%20of%20longitudinal%20data&amp;body=https%3a%2f%2fnumbersman77.netlify.com%2fteaching%2f201006_lda%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
