--- a/working/efspi_estimand/index.html
+++ b/working/efspi_estimand/index.html
@@ -376,10 +376,26 @@ Goals of the working group Bring together statisticians from industry, regulator
 <li>has given contributed talks at the following conferences:</li>
 </ul>
 
-<p>| Year  | Event    |<br />
-| &mdash;&ndash; | &mdash;&mdash;&ndash; |
-| 2019  | <a href="https://www.efspi.org/documents/events/Events%202019/HTA_Feb_19/EFSPI%20HTA%20Flyer%20Feb%202019%20draft%20updated-converted.pdf" target="_blank">HTA EFSPI SIG 1-day event 2019</a>|
-| 2019  | <a href="https://www.conftool.org/dagstat2019/index.php?page=browseSessions&amp;form_session=77#paperID316" target="_blank">DAGStat 2019</a> |</p>
+<table>
+<thead>
+<tr>
+<th>Year</th>
+<th>Event</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+<td>2019</td>
+<td><a href="https://www.efspi.org/documents/events/Events%202019/HTA_Feb_19/EFSPI%20HTA%20Flyer%20Feb%202019%20draft%20updated-converted.pdf" target="_blank">HTA EFSPI SIG 1-day event 2019</a></td>
+</tr>
+
+<tr>
+<td>2019</td>
+<td><a href="https://www.conftool.org/dagstat2019/index.php?page=browseSessions&amp;form_session=77#paperID316" target="_blank">DAGStat 2019</a></td>
+</tr>
+</tbody>
+</table>
 
 <p>The regulatory committee of the <a href="https://www.efspi.org" target="_blank">European Federation of Statisticians in the Pharmaceutical Industry</a> (EFSPI) co-ordinates regulatory activities across the European Pharmaceutical Statistical community. The key areas of engagement are the Review of regulatory guidance to provide consolidated cross industry responses and identification regulatory statistical issues that are concern across industry for discussion with regulators. In addition, the committee meets yearl with the <a href="https://www.gov.uk/government/organisations/medicines-and-healthcare-products-regulatory-agency" target="_blank">MHRA</a> biostatistics unit and the <a href="https://www.ema.europa.eu/en" target="_blank">EMA</a> <a href="https://www.ema.europa.eu/en/committees/working-parties-other-groups/chmp/biostatistics-working-party" target="_blank">biostatistics working part (BSWP)</a>.</p>
 
